--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -672,6 +672,31 @@
     Volume = 45,
     Year = 2007}
 
+@PROCEEDINGS{2009:ISIPTA,
+  title = {ISIPTA '09: Proceedings of the Sixth International Symposium on Imprecise
+    Probabilities: Theories and Applications},
+  year = {2009},
+  editor = {Augustin, T. and Coolen, F. and Moral, S. and Troffaes, M.},
+  address = {Durham, UK},
+  organization = {SIPTA}
+}
+
+@PROCEEDINGS{2011:ISIPTA,
+  title = {ISIPTA '11: Proceedings of the Seventh International Symposium on Imprecise
+    Probabilities: Theories and Applications},
+  year = {2011},
+  editor = {F. Coolen and G. de Cooman and Th. Fetz and M. Oberguggenberger},
+  address = {Innsbruck, Austria},
+  organization = {SIPTA}
+}
+
+@article{1973:huberstrassen,
+    Author = {P. Huber and V. Strassen},
+    Journal = {The Annals of Statistics},
+    Pages = {251--263},
+    Title = {Minimax tests and the {N}eyman-{P}earson lemma for capacities},
+    Volume = {1},
+    Year = {1973}}
 
 
 
