--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -388,4 +388,138 @@ Year = {1999}
      PAGES = {251--272},
 }
 
+@book {2013:fahrmeier-kneib-lang-marx,
+    AUTHOR = {Fahrmeir, Ludwig and Kneib, Thomas and Lang, Stephan and Marx, Brian},
+     TITLE = {Regression. Models, Methods and Applications},
+ PUBLISHER = {Springer},
+   ADDRESS = {New York},
+      YEAR = {2013},
+}
+
+@book {2001:fahrmeier-tutz,
+    AUTHOR = {Ludwig Fahrmeir and Gerhard Tutz},
+     TITLE = {Multivariate Statistical Modelling Based on Generalized Linear Models},
+      YEAR = {2001},
+ PUBLISHER = {Springer},
+    ADRESS = {New York}
+}
+
+@article{1985:fahrmeir-kaufmann,
+Author = {Fahrmeir, Ludwig and Kaufmann, H},
+Title = {Consistency and asymptotic normality of the maximum-likelihood estimator in generalized linear-models},
+Journal = {Annals of Statistics},
+Year = {1985},
+Volume = {13},
+Pages = {342--368},
+}
+
+@article {2009:kauermann,
+    AUTHOR = {Kauermann, R. and Krivobokova, T. and Fahrmeir, L.},
+     TITLE = {Some asymptotic results on generalized penalized spline smooting},
+   JOURNAL = {Journal of the Royal Statistical Society. Series B.
+              Methodological},
+    VOLUME = {71},
+      YEAR = {2009},
+     PAGES = {487--503},
+}
+
+@article {2007:fahrmeir,
+    AUTHOR = {Fahrmeir, L. and Raach, A.},
+     TITLE = {A {B}ayesian semiparametric latent variable model für mixed responses},
+   JOURNAL = {Psychometrika},
+    VOLUME = {72},
+      YEAR = {2007},
+     PAGES = {327--346},
+}
+
+@article {2007:scheipl,
+    AUTHOR = {Fabian Scheipl and Thomas Kneib},
+     TITLE = {Locally adaptive {B}ayesian {P}-splines with a Normal-Exponential-Gamma prior},
+   JOURNAL = {Computational Statistics \& Data Analysis},
+    VOLUME = {53},
+     ISSUE = {10},
+      YEAR = {2009},
+     PAGES = {3533--3552},
+}
+
+@article {2009:fahrmeir,
+    AUTHOR = {Ludwig Fahrmeir and Thomas Kneib},
+     TITLE = {Propriety of posteriors in structured additive regression models: Theory and empirical evidence},
+   JOURNAL = {Journal of Statistical Planning and Inference},
+    VOLUME = {139},
+     ISSUE = {3},
+      YEAR = {2009},
+     PAGES = {843--859},
+}
+
+@article {2006:fahrmeir,
+    AUTHOR = {Ludwig Fahrmeir and Thomas Kneib},
+     TITLE = {Structured additive regression for categorial space-time data: A mixed model approach},
+   JOURNAL = {Biometrics},
+    VOLUME = {62},
+     ISSUE = {1},
+      YEAR = {2006},
+     PAGES = {109--118},
+}
+
+@article {2007:kneib,
+    AUTHOR = {Thomas Kneib and Ludwig Fahrmeir},
+     TITLE = {A mixed model approach for geoadditive hazard regression for interval-censored survival times},
+  FJOURNAL = {Scandinavian Journal of Statistics},
+    VOLUME = {34},
+     ISSUE = {1},
+      YEAR = {2007},
+     PAGES = {207--228},
+}
+
+@article{1996:higgins,
+    AUTHOR = {Julian P. T. Higgins and Anne Whitehead},
+     TITLE = {Borrowing strength from external trials in a meta-analysis},
+   JOURNAL = {Statistics in Medicine},
+    VOLUME = {15},
+     ISSUE = {24},
+     PAGES = {2733--2749},
+      YEAR = {1996},
+}
+
+@article {2008:bousquet,
+    AUTHOR = {Nicolas Bousquet},
+     TITLE = {Diagnostic of prior-data agreement in applied Bayesian analysis},
+  FJOURNAL = {Journal of Applied Statistics},
+    VOLUME = {35},
+      YEAR = {2008},
+     PAGES = {1011--1029},
+}
+
+@book {1994:ohagan,
+    AUTHOR = {Anthony ~O'Hagan},
+     TITLE = {Bayesian Inference},
+    SERIES = {Kendall's Advanced Theory of Statistics},
+    VOLUME = {2B},
+ PUBLISHER = {Arnold},
+   ADDRESS = {London},
+      YEAR = {1994},
+}
+
+@incollection {1987:kyburg:ess,
+    editor = "Samuel Kotz and Norman L. Johnson and Campbell B. Read",
+ booktitle = "Encyclopedia of Statistical Sciences",
+     title = "Logic of Statistical Reasoning",
+    author = "Henry Kyburg",
+    volume = "5",
+ publisher = "Wiley-In{\-}ter{\-}sci{\-}ence",
+   address = "New York",
+     pages = "117--122",
+      year = "1987",
+}
+
+@InProceedings{2009:augustin-hable,
+    author = {Thomas Augustin and Robert Hable},
+    editor = {Hitoshi Furuta, Dan Frangopol, Masanobu Shinozuka},
+     title = {On the impact of robust statistics on imprecise probability models: a review},
+ booktitle = {Safety, Reliability and Risk of Structures, Infrastructures and Engineering Systems.
+              Proceedings of the 10th International Conference on Structural Safety and Reliability,
+              ICOSSAR, 13--17 September 2009, Osaka, Japan},
+      year = {2010},
+}
 
