--- a/defs.tex
+++ b/defs.tex
@@ -25,6 +25,7 @@
 
 \newcommand{\btheta}{\bs{\theta}}
 \newcommand{\bpsi}{\bs{\psi}}
+\newcommand{\bbeta}{\bs{\beta}}
 
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
@@ -81,6 +82,9 @@
 
 \def\cl{\ul{c}}
 \def\cu{\ol{c}}
+
+\newcommand{\z}{\vec{z}}
+
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
