--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -689,7 +689,7 @@ and that, in fact, probability is fit to cover only one aspect of the uncertaint
 The exclusive role of probability as a methodology for handling uncertainty has eloquently been rejected,
 e.g., by \textcite[p.~1]{1999:klir}: 
 \begin{quotation}
-%``
+\begin{small}
 For three hundred years [\ldots] uncertainty was conceived solely in
 terms of probability theory. This seemingly unique connection
 between uncertainty and probability is now challenged [\ldots by several
@@ -702,6 +702,7 @@ multidimensional concept. [\ldots\ That] multidimensional nature of
 uncertainty was obscured when uncertainty was conceived solely in
 terms of probability theory, in which it is manifested by only one
 of its dimensions.
+\end{small}
 \end{quotation}
 
 \textcite[\S 1.4]{2001:weichselberger} identifies this multidimensionality as a \emph{meta motive},
