--- a/intro.tex
+++ b/intro.tex
@@ -59,7 +59,7 @@ instead of $n^{(1)}$ and $y^{(1)}$, respectively).
 This paper was the result of a collaborative work, where both authors contributed
 more or less in equal parts. While Gero Walter contributed central concepts and basic ideas,
 along with the theoretical results, Thomas Augustin devised most of the structure,
-and contributed most in the introductory and concluding sections.***
+and contributed most of the introductory and concluding sections.***
 
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
@@ -612,7 +612,7 @@ that arise in testing with so-called non-informative priors.}
 We see this as a strong argument against the use of improper priors.
 An example where improper priors seem inadequate also for parameter estimation
 will be given in Section~\ref{sec:alpha-factor-prior};
-comments on improper priors from the viewpoint of generalized Bayesian inference
+comments on improper priors from the viewpoint of generalised Bayesian inference
 are given in Section~\ref{sec:gbicp-properties-criteria},
 item \ref{enum:noninformative}, and in Section~\ref{sec:idm-and-near-ignorance}.
 
@@ -676,7 +676,7 @@ a combination of the normal distribution above and the inverse gamma distributio
 This prior is a special case of the priors for Bayesian regression discussed in ****festschrift****,
 where $\X = (1, \ldots, 1)^\tra$****.
 When instead of the variance $\sigma^2$ the precision $\kappa = 1/\sigma^2$ is considered,
-this prior is can be written as a normal-gamma prior
+this prior can be written as a normal-gamma prior
 \parencite[see, e.g.,][pp.~136, 434]{2000:bernardosmith}.}
 
 With \eqref{eq:canonicalupdate}, the parameters for the posterior distribution are
