--- a/jstp.tex
+++ b/jstp.tex
@@ -385,7 +385,7 @@ the practically important case of linear regression
 models, modelling the (linear) influence of certain variables (called covariates,
 confounders, regressors, stimulus or independent variables) on a
 certain outcome (also called response or dependent variable).%
-\footnote{See ***Chapter~\ref{cha:festschrift} (Appendix~1)*** for alternative models
+\footnote{See Section~\ref{sec:festschrift} for alternative models
 that adhere to the regular conjugate framework of Section~\ref{sec:regularconjugates}.}
 \end{example}
 
