--- a/defs.tex
+++ b/defs.tex
@@ -26,6 +26,7 @@
 \newcommand{\btheta}{\bs{\theta}}
 \newcommand{\bpsi}{\bs{\psi}}
 \newcommand{\bbeta}{\bs{\beta}}
+\newcommand{\balpha}{\bs{\alpha}}
 
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
