--- a/intro.tex
+++ b/intro.tex
@@ -760,7 +760,7 @@ With $\bpsi$ and $\mbf{b}(\bpsi)$ derived from the sample model as
 \mbf{b}(\bpsi) &= -\ln(\theta_0),\,% \theta_0 = 1 - \sum_{j=1}^k \theta_j\,,
 \end{align*}
 the conjugate prior is at first constructed as a density over $\bpsi$,
-dropping the upper index ${}\uz$ in $\nz$ and the vectorial $\mbf{y}\uz$ for ease of notation:
+dropping the upper index ${}\uz$ in $\nz$ and the vectorial $\byz$ for ease of notation:
 \begin{align*}
 p(\bpsi\mid n,\vec{y})\, \dd\bpsi
  &\propto \exp\Bigg\{n\, \Bigg[ \sum_{j=1}^k y_j \ln\bigg(\frac{\theta_j}{\theta_0}\bigg) - \big(-\ln(\theta_0)\big) \Bigg] \Bigg\} \,\dd\bpsi\,,.
