--- a/defs.tex
+++ b/defs.tex
@@ -22,6 +22,7 @@
 
 \newcommand{\X}{\mbf{X}}
 \newcommand{\x}{\vec{x}}
+\def\XtX{\X^\tra \! \X}
 
 \newcommand{\btheta}{\bs{\theta}}
 \newcommand{\bpsi}{\bs{\psi}}
@@ -85,7 +86,19 @@
 \def\cu{\ol{c}}
 
 \newcommand{\z}{\vec{z}}
+\def\ztz{\z^\tra \! \z}
+\def\Xtz{\X^\tra \! \z}
+\def\ztX{\z^\tra \! \X}
 
+
+\def\mz{\vec{m}\uz}
+\def\mn{\vec{m}\un}
+\def\Mz{\mbf{M}\uz}
+\def\Mn{\mbf{M}\un}
+\def\az{a\uz}
+\def\an{a\un}
+\def\bz{b\uz}
+\def\bn{b\un}
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
